# shamir-secret-sharing

./: .gitignore  Dockerfile  README.md  docker-compose.yml  master.db  requirements.md
.github/: CODEOWNERS  dependabot.yaml
client/: Dockerfile  README.md  __main__.py  pyproject.toml  requirements.txt
debian/: config.ini  postinst.sh  postrm.sh  shard.service
docs/: api.html  cli.html  index.html  python.html  script.js  style.css  web-ui.html
package/: .gitignore  .pre-commit-config.yaml  Makefile  UNKNOWN-0.0.0-cp310-cp310-linux_x86_64.whl  development.md  noxfile.py  package.cfg  pyproject.toml  pytest.ini  setup.py
shard/: .gitignore  README.md  __main__.py  config.py  pyproject.toml
shard/master/: __init__.py  db.py  server.py  start.py
shard/master/db/: __init__.py
shard/master/db/managers/: __init__.py  secret.py  slave.py
shard/master/db/models/: __init__.py  secret.py  secret2slave.py  slave.py  user.py
shard/master/fastapi/: app.py  constants.py  db.py  logic.py  main.py  master.db  models.py
shard/master/grpc/: communication.py  server.py
shard/master/http/: __init__.py  app.py  constants.py  logic.py  models.py
shard/resources/schema_registry/: master.proto  slave.proto
shard/resources/scripts/: proto_build.sh  utils.sh
shard/schema_registry/: master.proto  slave.proto
shard/scripts/: proto_build.sh
shard/slave/: __init__.py  db.py  server.py  start.py
shard/slave/db/: __init__.py
shard/slave/db/managers/: __init__.py  secret.py
shard/slave/db/models/: __init__.py  secret.py
shard/slave/grpc/: server.py
(+33 files in other folders)
